<resources>
    <string name="app_name">Nota Alvo</string>

    <!-- Mensagens de feedback -->
    <string name="warning_message">Aviso</string>
    <string name="msg_reprovado">Reprovado</string>

    <!-- Botões e operadores -->
    <string name="close">Fechar</string>
    <string name="equals">CAL</string>
    <string name="erase_all">CE</string>
    <string name="erase">DEL</string>
    <string name="point">.</string>

    <!-- Números -->
    <string name="zero">0</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_6">6</string>
    <string name="number_5">5</string>
    <string name="number_4">4</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>

    <!-- Mensagens de feedback de aprovação/reprovação -->
    <string name="approval_message">Parabéns! \n Você foi aprovado na disciplina. 🎉</string>
    <string name="final_exam_requirement_message">🎓 Apenas os alunos que alcançarem média igual ou superior a 8,00 estarão dispensados da Prova Final. Aqueles com notas abaixo desse valor não terão essa dispensa e, caso optem por não realizar a Prova Final, receberão nota zero.</string>
    <string name="rejection_message">Infelizmente, suas chances de aprovação são nulas. 😞</string>

    <!-- Mensagem com a nota necessária para a Prova Final -->
    <string name="final_exam_requirement_note">📢 A nota necessária para a aprovação na Prova Final é: %1$s</string>

    <!-- Mensagem Intro 1 -->
    <string name="intro_welcome_title">Bem-vindo \n ao \n Nota Alvo!</string>
    <string name="intro_welcome_description">Aqui você calcula a nota necessária \n para passar na disciplina de forma \n simples e rápida.</string>

    <!-- Mensagem Intro 2 -->
    <string name="label_enter_partial_average">Digite sua média parcial (MEE) disponível no Ecampus.</string>
    <string name="label_find_out_instantly_how_much_you_need">Descubra instantaneamente o quanto precisa tirar na prova final.</string>
    <string name="label_how_it_works">Como funciona?</string>

    <!-- Mensagem Intro 3 -->
    <string name="label_ready_to_start">Pronto para começar?</string>
    <string name="label_track_your_performance">Acompanhe seu desempenho e \n garanta a aprovação!</string>
    <string name="label_we_are_here_to_help_you">Estamos aqui para ajudar você a \n atingir sua meta.</string>

    <!-- Botões de ação -->
    <string name="done">Finalizar</string>
    <string name="skip">Pular</string>

    <!-- Compartilhamento -->
    <string name="share_content">Confira este app incrível!</string>
    <string name="share_app">Compartilhar via</string>
    <string name="share_app_via">Compartilhar App via…</string>


    <!--  Avaliação do app  -->
    <string name="rate_app_title">Avalie o App</string>
    <string name="rate_app_message">Se você gostou do nosso aplicativo, por favor, avalie-o na Google Play Store. Isso nos ajuda a melhorar e continuar oferecendo um bom serviço.</string>
    <string name="rate_now">Avaliar</string>
    <string name="no_thanks">Não, obrigado</string>
    <string name="later">Mais tarde</string>
    <string name="invalid_score_message">Nota Inválida</string>

</resources>