<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.calculator.CalculatorActivity">

    <EditText
        android:id="@+id/txtResult"
        style="@style/AppTextViewResult"
        android:background="@android:color/transparent"
        android:enabled="false"
        android:maxLength="4"
        android:importantForAutofill="no"
        android:inputType="numberDecimal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="@dimen/main_layout_element_height_weight"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnAllErase"
            style="@style/AppButtonAction"
            android:text="@string/erase_all" />

        <TextView
            android:id="@+id/btnErase"
            style="@style/AppButtonAction"
            android:text="@string/erase" />

        <TextView
            android:id="@+id/btnDot"
            style="@style/AppNumbersButton"
            android:text="@string/point" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="@dimen/main_layout_element_height_weight"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnSeven"
            style="@style/AppNumbersButton"
            android:text="@string/number_7" />

        <TextView
            android:id="@+id/btnEight"
            style="@style/AppNumbersButton"
            android:text="@string/number_8" />

        <TextView
            android:id="@+id/btnNine"
            style="@style/AppNumbersButton"
            android:text="@string/number_9" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="@dimen/main_layout_element_height_weight"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnFour"
            style="@style/AppNumbersButton"
            android:text="@string/number_4" />

        <TextView
            android:id="@+id/btnFive"
            style="@style/AppNumbersButton"
            android:text="@string/number_5" />

        <TextView
            android:id="@+id/btnSix"
            style="@style/AppNumbersButton"
            android:text="@string/number_6" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="@dimen/main_layout_element_height_weight"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnOne"
            style="@style/AppNumbersButton"
            android:text="@string/number_1" />

        <TextView
            android:id="@+id/btnTwo"
            style="@style/AppNumbersButton"
            android:text="@string/number_2" />

        <TextView
            android:id="@+id/btnThree"
            style="@style/AppNumbersButton"
            android:text="@string/number_3" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="@dimen/main_layout_element_height_weight"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnZero"
            style="@style/AppNumbersButton"
            android:layout_weight="0.5"
            android:text="@string/zero"
            tools:ignore="NestedWeights" />

        <TextView
            android:id="@+id/btnEquals"
            style="@style/AppButtonAction"
            android:text="@string/equals" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/adViewContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="0.2" />

</LinearLayout>