<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtResult"
        style="@style/AppTextViewResult"
        android:background="@android:color/transparent"
        android:enabled="false"
        android:hint="ME" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/btnSeven"
            style="@style/AppNumbersButton"
            android:text="7" />

        <TextView
            android:id="@+id/btnEigth"
            style="@style/AppNumbersButton"
            android:text="8" />

        <TextView
            android:id="@+id/btnNine"
            style="@style/AppNumbersButton"
            android:text="@string/number_9" />

        <TextView
            style="@style/AppNumbersButton"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnFour"
            style="@style/AppNumbersButton"
            android:text="@string/number_4" />

        <TextView
            android:id="@+id/btnFive"
            style="@style/AppNumbersButton"
            android:text="@string/number_5" />

        <TextView
            android:id="@+id/btnSix"
            style="@style/AppNumbersButton"
            android:text="@string/number_6" />

        <TextView
            style="@style/AppNumbersButton"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnOne"
            style="@style/AppNumbersButton"
            android:text="@string/number_1" />

        <TextView
            android:id="@+id/btnTwo"
            style="@style/AppNumbersButton"
            android:text="@string/number_2" />

        <TextView
            android:id="@+id/btnThree"
            style="@style/AppNumbersButton"
            android:text="@string/number_3" />

        <TextView
            android:id="@+id/btnAllErase"
            style="@style/AppNumberButtonEraseAll"
            android:text="@string/erase_all" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnZero"
            style="@style/AppNumbersButton"
            android:layout_weight="0.5"
            android:text="@string/zero" />

        <ImageView
            android:id="@+id/btnErase"
            style="@style/AppIcon"
            android:src="@drawable/ic_backspace" />

        <TextView
            android:id="@+id/btnEquals"
            style="@style/AppNumberButtonEquals"
            android:text="@string/equals" />

    </LinearLayout>

</LinearLayout>